ready to squash some bugs

--- a/src/app/Pages/user-page/navbar/facet-menu/facet-menu.component.scss
+++ b/src/app/Pages/user-page/navbar/facet-menu/facet-menu.component.scss
@@ -21,7 +21,7 @@ li {
   left: 0;
     @media (max-width: 640px) {
         display: unset;
-        background: url(https://i.gifer.com/U8mr.gif) fixed no-repeat;
+        background: url(https://www.pixelstalk.net/wp-content/uploads/images2/Dark_Desktop-Wallpapers-Abstract-Neon.jpg) fixed no-repeat;
         background-size: cover;
         overflow: hidden;
         box-sizing: border-box;
