--- a/src/app/Pages/user-page/user-page.component.scss
+++ b/src/app/Pages/user-page/user-page.component.scss
@@ -10,6 +10,7 @@
     max-width: 1000px;
     border-bottom: yellow dashed;
     border-top: yellow dashed;
+    background: wheat;
     @media(max-width: 640px)
     {
         width: 100%;
