--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,7 @@
 
   body
   {
-    background: url(https://i.gifer.com/U8mr.gif) fixed no-repeat;
+    background: url(https://www.pixelstalk.net/wp-content/uploads/images2/Dark_Desktop-Wallpapers-Abstract-Neon.jpg) fixed no-repeat;
     background-size: cover;
   }
 
